[package]
name = "du_has_t"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.1"
serde = "^1.0.0"
serde_derive = "^1.0.0"
rand = "^0.7.0"
rand_core = "^0.5.1"
rand_chacha = "^0.2.2"
static_assertions = "*"